Speed up examples

--- a/docs/examples/as3600.ipynb
+++ b/docs/examples/as3600.ipynb
@@ -279,7 +279,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bd208faa",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbsphinx-thumbnail"
+    ]
+   },
    "outputs": [],
    "source": [
     "# design load cases\n",
@@ -379,12 +383,12 @@
     ")\n",
     "\n",
     "# create biaxial bending diagram\n",
-    "f_bb_res1, phis1 = design_code.biaxial_bending_diagram(progress_bar=False)\n",
-    "bb_res1 = conc_sec.biaxial_bending_diagram(progress_bar=False)\n",
+    "f_bb_res1, phis1 = design_code.biaxial_bending_diagram(n_points=24, progress_bar=False)\n",
+    "bb_res1 = conc_sec.biaxial_bending_diagram(n_points=24, progress_bar=False)\n",
     "f_bb_res2, phis2 = design_code.biaxial_bending_diagram(\n",
-    "    n_design=2000e3, progress_bar=False\n",
+    "    n_design=2000e3, n_points=24, progress_bar=False\n",
     ")\n",
-    "bb_res2 = conc_sec.biaxial_bending_diagram(n=2000e3, progress_bar=False)"
+    "bb_res2 = conc_sec.biaxial_bending_diagram(n=2000e3, n_points=24, progress_bar=False)"
    ]
   },
   {
@@ -395,14 +399,14 @@
    "outputs": [],
    "source": [
     "# plot case 1\n",
-    "ax = f_bb_res1.plot_diagram(fmt=\"-\", render=False)\n",
-    "bb_res1.plot_diagram(fmt=\"-\", ax=ax)\n",
+    "ax = f_bb_res1.plot_diagram(fmt=\"x-\", render=False)\n",
+    "bb_res1.plot_diagram(fmt=\"o-\", ax=ax)\n",
     "plt.show()\n",
     "print(f\"Average phi = {np.mean(phis1):.3f}\")\n",
     "\n",
     "# plot case 2\n",
-    "ax = f_bb_res2.plot_diagram(fmt=\"-\", render=False)\n",
-    "bb_res2.plot_diagram(fmt=\"-\", ax=ax)\n",
+    "ax = f_bb_res2.plot_diagram(fmt=\"x-\", render=False)\n",
+    "bb_res2.plot_diagram(fmt=\"o-\", ax=ax)\n",
     "plt.show()\n",
     "print(f\"Average phi = {np.mean(phis2):.3f}\")"
    ]
