--- a/docs/examples/composite_section.ipynb
+++ b/docs/examples/composite_section.ipynb
@@ -127,7 +127,7 @@
     "    t_f=15.4,\n",
     "    t_w=9.9,\n",
     "    r=16.5,\n",
-    "    n_r=8,\n",
+    "    n_r=3,\n",
     "    material=steel_300,\n",
     ").align_center(align_to=conc)\n",
     "\n",
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mk_res = conc_sec.moment_curvature_analysis(progress_bar=False)"
+    "mk_res = conc_sec.moment_curvature_analysis(kappa_inc=2.5e-6, progress_bar=False)"
    ]
   },
   {
@@ -226,7 +226,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "abd35873",
-   "metadata": {},
+   "metadata": {
+    "nbsphinx-thumbnail": {
+     "output-index": 0
+    }
+   },
    "outputs": [],
    "source": [
     "serv_stress = conc_sec.calculate_service_stress(\n",
@@ -275,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_res = conc_sec.biaxial_bending_diagram(progress_bar=False)\n",
+    "bb_res = conc_sec.biaxial_bending_diagram(n_points=24, progress_bar=False)\n",
     "bb_res.plot_diagram()"
    ]
   },
@@ -330,14 +334,14 @@
     "# create outer diameter of steel column\n",
     "steel_col = circular_section_by_area(\n",
     "    area=np.pi * 323.9**2 / 4,\n",
-    "    n=64,\n",
+    "    n=24,\n",
     "    material=steel_350,\n",
     ")\n",
     "\n",
     "# create inner diameter of steel column, concrete filled\n",
     "inner_conc = circular_section_by_area(\n",
     "    area=np.pi * (323.9 - 2 * 12.7) ** 2 / 4,\n",
-    "    n=64,\n",
+    "    n=32,\n",
     "    material=concrete,\n",
     ")\n",
     "\n",
@@ -363,7 +367,7 @@
     "geom_conc = concrete_circular_section(\n",
     "    d=350,\n",
     "    area_conc=np.pi * 350**2 / 4,\n",
-    "    n_conc=64,\n",
+    "    n_conc=24,\n",
     "    dia_bar=20,\n",
     "    area_bar=310,\n",
     "    n_bar=6,\n",
@@ -443,8 +447,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mk_res_comp = conc_sec_comp.moment_curvature_analysis(progress_bar=False)\n",
-    "mk_res_conc = conc_sec_conc.moment_curvature_analysis(progress_bar=False)"
+    "mk_res_comp = conc_sec_comp.moment_curvature_analysis(\n",
+    "    kappa_inc=2.5e-6, progress_bar=False\n",
+    ")\n",
+    "mk_res_conc = conc_sec_conc.moment_curvature_analysis(\n",
+    "    kappa_inc=2.5e-6, progress_bar=False\n",
+    ")"
    ]
   },
   {
@@ -457,7 +465,7 @@
     "res.MomentCurvatureResults.plot_multiple_results(\n",
     "    moment_curvature_results=[mk_res_comp, mk_res_conc],\n",
     "    labels=[\"Composite\", \"Concrete\"],\n",
-    "    fmt=\"-\",\n",
+    "    fmt=\"x-\",\n",
     ")"
    ]
   },
@@ -551,7 +559,7 @@
     "    t_f=15.6,\n",
     "    t_w=10.2,\n",
     "    r=14,\n",
-    "    n_r=8,\n",
+    "    n_r=3,\n",
     "    material=steel_300,\n",
     ")\n",
     "\n",
@@ -559,7 +567,7 @@
     "conc_slab = (\n",
     "    rectangular_section(\n",
     "        d=120,\n",
-    "        b=1500,\n",
+    "        b=1200,\n",
     "        material=concrete,\n",
     "    )\n",
     "    .align_center(align_to=ub)\n",
@@ -568,9 +576,6 @@
     "\n",
     "# as there is no overlapping geometry, we can simply add the two sections together\n",
     "geom = ub + conc_slab\n",
-    "\n",
-    "# the cross-section is rotated 90 degrees to aid viewing the stress plots\n",
-    "geom = geom.rotate_section(angle=np.pi / 2, use_radians=True)\n",
     "\n",
     "# create concrete section and plot\n",
     "conc_sec = ConcreteSection(geom, geometric_centroid_override=True)\n",
@@ -616,7 +621,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mk_res = conc_sec.moment_curvature_analysis(theta=np.pi / 2, progress_bar=False)"
+    "mk_res = conc_sec.moment_curvature_analysis(kappa_inc=1e-6, progress_bar=False)"
    ]
   },
   {
@@ -646,10 +651,10 @@
    "source": [
     "el_stress = conc_sec.calculate_service_stress(moment_curvature_results=mk_res, m=500e6)\n",
     "yield_stress = conc_sec.calculate_service_stress(\n",
-    "    moment_curvature_results=mk_res, m=1000e6\n",
+    "    moment_curvature_results=mk_res, m=900e6\n",
     ")\n",
     "ult_stress = conc_sec.calculate_service_stress(\n",
-    "    moment_curvature_results=mk_res, m=1200e6\n",
+    "    moment_curvature_results=mk_res, m=1150e6\n",
     ")"
    ]
   },
