--- a/docs/examples/cracked_properties.ipynb
+++ b/docs/examples/cracked_properties.ipynb
@@ -218,7 +218,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0307f011",
-   "metadata": {},
+   "metadata": {
+    "nbsphinx-thumbnail": {
+     "output-index": 0
+    }
+   },
    "outputs": [],
    "source": [
     "cracked_res_sag.plot_cracked_geometries(labels=[], cp=False, legend=False)"
