--- a/docs/examples/moment_curvature.ipynb
+++ b/docs/examples/moment_curvature.ipynb
@@ -109,7 +109,7 @@
     "    conc_nonlinear,\n",
     "]\n",
     "\n",
-    "steel_ep = SteelBar(\n",
+    "steel = SteelBar(\n",
     "    name=\"Steel - Elastic-Plastic\",\n",
     "    density=7.85e-6,\n",
     "    stress_strain_profile=ssp.SteelElasticPlastic(\n",
@@ -118,24 +118,7 @@
     "        fracture_strain=0.05,\n",
     "    ),\n",
     "    colour=\"grey\",\n",
-    ")\n",
-    "\n",
-    "steel_hd = SteelBar(\n",
-    "    name=\"Steel - Hardening\",\n",
-    "    density=7.85e-6,\n",
-    "    stress_strain_profile=ssp.SteelHardening(\n",
-    "        yield_strength=500,\n",
-    "        elastic_modulus=200e3,\n",
-    "        fracture_strain=0.05,\n",
-    "        ultimate_strength=600,\n",
-    "    ),\n",
-    "    colour=\"grey\",\n",
-    ")\n",
-    "\n",
-    "steel_material_list = [\n",
-    "    steel_ep,\n",
-    "    steel_hd,\n",
-    "]"
+    ")"
    ]
   },
   {
@@ -166,8 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for steel in steel_material_list:\n",
-    "    steel.stress_strain_profile.plot_stress_strain(title=steel.name)"
+    "steel.stress_strain_profile.plot_stress_strain(title=steel.name)"
    ]
   },
   {
@@ -188,14 +170,14 @@
    "outputs": [],
    "source": [
     "col = rectangular_section(d=350, b=600)\n",
-    "void = circular_section(d=125, n=16).align_center(align_to=col)\n",
+    "void = circular_section(d=125, n=12).align_center(align_to=col)\n",
     "col = col - void  # subtract void from column\n",
     "\n",
     "# add bars to column\n",
     "geom = add_bar_rectangular_array(\n",
     "    geometry=col,\n",
     "    area=450,\n",
-    "    material=steel_ep,\n",
+    "    material=steel,\n",
     "    n_x=6,\n",
     "    x_s=492 / 5,\n",
     "    n_y=3,\n",
@@ -246,7 +228,9 @@
     "\n",
     "    # perform moment curvature analysis and store results\n",
     "    # bending about major axis so theta = pi/2\n",
-    "    res = conc_sec.moment_curvature_analysis(theta=np.pi / 2, progress_bar=False)\n",
+    "    res = conc_sec.moment_curvature_analysis(\n",
+    "        theta=np.pi / 2, kappa_inc=2.5e-7, progress_bar=False\n",
+    "    )\n",
     "    moment_curvature_results.append(res)\n",
     "\n",
     "    # create plot label\n",
@@ -366,7 +350,7 @@
     "fix, ax = plt.subplots()\n",
     "kappa = np.array(moment_curvature_results[-1].kappa)\n",
     "moment = np.array(moment_curvature_results[-1].m_xy) / 1e6\n",
-    "ax.plot(kappa[:16], moment[:16], \"x-\")\n",
+    "ax.plot(kappa[:12], moment[:12], \"x-\")\n",
     "plt.show()"
    ]
   },
@@ -375,79 +359,7 @@
    "id": "e803feb0",
    "metadata": {},
    "source": [
-    "It's clear in the above plot that the softening due to initial cracking occurs between 75 kN.m and 100 kN.m, which aligns well with the elastic result."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9cc5c61a",
-   "metadata": {},
-   "source": [
-    "## Varying Steel Properties\n",
-    "\n",
-    "We will now study the effect the steel stress-strain profile has on the moment curvature diagram.\n",
-    "\n",
-    "### Moment Curvature Analysis\n",
-    "\n",
-    "The below code loops through each steel material, assigning it to all the steel geometries and performs a moment curvature analysis. By not modifying the concrete material, we are using the last assigned property, i.e. non-linear concrete. Also note that we already have the results for the elastic-plastic steel as this was used in the first analysis."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "775a1f66",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# initialise list to store results and list to store labels\n",
-    "moment_curvature_results = [moment_curvature_results[-1]]\n",
-    "labels = [steel_material_list[0].name]\n",
-    "\n",
-    "# assign hardening steel material to rest of geometries in CompoundGeometry object\n",
-    "steel = steel_material_list[-1]\n",
-    "for g in geom.geoms[1:]:\n",
-    "    g.material = steel\n",
-    "\n",
-    "# create ConcreteSection object\n",
-    "conc_sec = ConcreteSection(geom)\n",
-    "\n",
-    "# perform moment curvature analysis and store results\n",
-    "# bending about major axis so theta = pi/2\n",
-    "res = conc_sec.moment_curvature_analysis(theta=np.pi / 2, progress_bar=False)\n",
-    "moment_curvature_results.append(res)\n",
-    "\n",
-    "# create plot label\n",
-    "labels.append(steel.name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6a5c927",
-   "metadata": {},
-   "source": [
-    "### Plotting Results\n",
-    "\n",
-    "We can plot the moment curvature results on a single plot by using the ``MomentCurvatureResults.plot_multiple_results()`` method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2fdacc52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MomentCurvatureResults.plot_multiple_results(\n",
-    "    moment_curvature_results=moment_curvature_results, labels=labels, fmt=\"-\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7cbed231",
-   "metadata": {},
-   "source": [
-    "The above plot shows that the moment curvature response is identical up until the point of steel yielding, as expected. Beyond the yield point, the section with the hardening steel becomes slightly stiffer than the section with the perfectly plastic steel. This is because the stresses in the reinforcing steel continue to harden beyond the yield point, resulting in a slightly larger moment."
+    "It's clear in the above plot that the softening due to initial cracking occurs between 75 kN.m and 125 kN.m, which aligns well with the elastic result. To investigate this further, we could reduce the resolution of the moment-curvature plot in this region."
    ]
   },
   {
@@ -490,11 +402,11 @@
     "geom = add_bar_rectangular_array(\n",
     "    geometry=geom,\n",
     "    area=450,\n",
-    "    material=steel_ep,\n",
+    "    material=steel,\n",
     "    n_x=3,\n",
     "    x_s=158,\n",
-    "    n_y=4,\n",
-    "    y_s=172,\n",
+    "    n_y=3,\n",
+    "    y_s=258,\n",
     "    anchor=(42, 42),\n",
     "    exterior_only=True,\n",
     ")\n",
@@ -588,7 +500,7 @@
     "### Further Refinement\n",
     "In this example we change the following parameters:\n",
     "\n",
-    "- ``kappa_inc=3e-7`` - a balance between the previous two examples\n",
+    "- ``kappa_inc=1e-6`` - a balance between the previous two examples\n",
     "- ``kappa_mult=1.25`` - smoother changes in curvature increment (default = ``2``)\n",
     "- ``delta_m_min=0.1`` - only increase the curvature increment if the change in moment is less than 10% (default = 15%)\n",
     "- ``kappa_inc_max=2e-5`` - allow larger curvature increments, can be useful in the plateau region (default = ``5e-6``)"
@@ -602,7 +514,7 @@
    "outputs": [],
    "source": [
     "res3 = conc_sec.moment_curvature_analysis(\n",
-    "    kappa_inc=3e-7,\n",
+    "    kappa_inc=1e-6,\n",
     "    kappa_mult=1.25,\n",
     "    delta_m_min=0.1,\n",
     "    kappa_inc_max=2e-5,\n",
@@ -738,10 +650,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_n0 = conc_sec.moment_curvature_analysis(n=0, progress_bar=False)\n",
-    "res_n1 = conc_sec.moment_curvature_analysis(n=0.2 * 600 * 600 * 31, progress_bar=False)\n",
-    "res_n2 = conc_sec.moment_curvature_analysis(n=0.4 * 600 * 600 * 31, progress_bar=False)\n",
-    "res_nt = conc_sec.moment_curvature_analysis(n=-1000e3, progress_bar=False)"
+    "res_n0 = conc_sec.moment_curvature_analysis(n=0, kappa_inc=1e-6, progress_bar=False)\n",
+    "res_n1 = conc_sec.moment_curvature_analysis(\n",
+    "    n=0.2 * 600 * 600 * 31, kappa_inc=1e-6, progress_bar=False\n",
+    ")\n",
+    "res_nt = conc_sec.moment_curvature_analysis(\n",
+    "    n=-1000e3, kappa_inc=1e-6, progress_bar=False\n",
+    ")"
    ]
   },
   {
@@ -752,8 +667,8 @@
    "outputs": [],
    "source": [
     "MomentCurvatureResults.plot_multiple_results(\n",
-    "    moment_curvature_results=[res_n0, res_n1, res_n2, res_nt],\n",
-    "    labels=[\"$N=0$ kN\", \"$N=0.2f'cA_g$\", \"$N=0.4f'cA_g$\", \"$N=-1000$ kN\"],\n",
+    "    moment_curvature_results=[res_n0, res_n1, res_nt],\n",
+    "    labels=[\"$N=0$ kN\", \"$N=0.2f'cA_g$\", \"$N=-1000$ kN\"],\n",
     "    fmt=\"-\",\n",
     ")"
    ]
