--- a/docs/examples/nzs3101.ipynb
+++ b/docs/examples/nzs3101.ipynb
@@ -151,7 +151,7 @@
     "    area_bot=np.pi * 25**2 / 4,\n",
     "    n_bot=5,\n",
     "    c_bot=35 + 12,\n",
-    "    n_circle=8,\n",
+    "    n_circle=4,\n",
     "    conc_mat=concrete_40,\n",
     "    steel_mat=steel_300E,\n",
     ")\n",
@@ -356,7 +356,7 @@
     "    area_side=area,\n",
     "    n_side=2,\n",
     "    c_side=35 + 12,\n",
-    "    n_circle=8,\n",
+    "    n_circle=4,\n",
     "    conc_mat=concrete_40,\n",
     "    steel_mat=steel_500E,\n",
     ")\n",
@@ -481,7 +481,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bd208faa",
-   "metadata": {},
+   "metadata": {
+    "nbsphinx-thumbnail": {
+     "output-index": 2
+    }
+   },
    "outputs": [],
    "source": [
     "# design load cases\n",
@@ -527,10 +531,10 @@
    "source": [
     "# create biaxial bending diagram\n",
     "f_bb_res1, phis1 = design_code.biaxial_bending_diagram(\n",
-    "    n_design=N_o_T * 1e3, progress_bar=False\n",
+    "    n_design=N_o_T * 1e3, n_points=24, progress_bar=False\n",
     ")\n",
     "f_bb_res2, phis2 = design_code.biaxial_bending_diagram(\n",
-    "    n_design=N_o_C * 1e3, progress_bar=False\n",
+    "    n_design=N_o_C * 1e3, n_points=24, progress_bar=False\n",
     ")"
    ]
   },
@@ -571,8 +575,8 @@
     "# determine maximum compression load for the column section\n",
     "max_comp = design_code.max_comp_strength(cpe_design=True)\n",
     "max_ten = design_code.max_ten_strength()\n",
-    "steps_axial = 15\n",
-    "steps_moment = 20\n",
+    "steps_axial = 8\n",
+    "steps_moment = 12\n",
     "# generate axial load list\n",
     "n_design_list = np.linspace(-max_ten + 20000, max_comp, steps_axial)\n",
     "theta_list = np.linspace(0.0, 2 * np.pi, steps_moment, False)\n",
@@ -592,6 +596,7 @@
     "        pphr_class=\"NDPR\",\n",
     "        analysis_type=\"cpe_chk\",\n",
     "        n_design=n_design,\n",
+    "        n_points=24,\n",
     "        progress_bar=False,\n",
     "    )\n",
     "    results_bb.append(f_bb_res)\n",
@@ -690,6 +695,7 @@
     "        compressive_strength=prob_compressive_strength,\n",
     "        tensile_strength=prob_tensile_strength,\n",
     "        conc_tension=True,\n",
+    "        n_points=18,\n",
     "    ),\n",
     "    ultimate_stress_strain_profile=RectangularStressBlock(\n",
     "        compressive_strength=prob_compressive_strength,\n",
@@ -761,7 +767,7 @@
     "    area_bot=area,\n",
     "    n_bot=5,\n",
     "    c_bot=30 + 10,\n",
-    "    n_circle=16,\n",
+    "    n_circle=4,\n",
     "    conc_mat=concrete_25_prob,\n",
     "    steel_mat=steel_275,\n",
     ")\n",
@@ -795,7 +801,7 @@
    "outputs": [],
    "source": [
     "moment_curvature_results = conc_sec.moment_curvature_analysis(\n",
-    "    theta=0, progress_bar=False\n",
+    "    theta=0, kappa_inc=2.5e-7, progress_bar=False\n",
     ")\n",
     "print(\n",
     "    f\"The failure material is:-\\n{moment_curvature_results.failure_geometry.material.name}\"\n",
@@ -864,7 +870,7 @@
     "    area_bot=area,\n",
     "    n_bot=5,\n",
     "    c_bot=30 + 10,\n",
-    "    n_circle=8,\n",
+    "    n_circle=4,\n",
     "    conc_mat=concrete_25,\n",
     "    steel_mat=steel_275,\n",
     ")\n",
