--- a/docs/examples/prestressed_section.ipynb
+++ b/docs/examples/prestressed_section.ipynb
@@ -523,7 +523,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mk_serv = conc_sec_serv.moment_curvature_analysis(kappa_mult=1.1, progress_bar=False)"
+    "mk_serv = conc_sec_serv.moment_curvature_analysis(\n",
+    "    kappa_mult=1.1, kappa_inc=5e-7, progress_bar=False\n",
+    ")"
    ]
   },
   {
@@ -533,7 +535,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mk_ult = conc_sec_ult.moment_curvature_analysis(kappa_mult=1.1, progress_bar=False)"
+    "mk_ult = conc_sec_ult.moment_curvature_analysis(\n",
+    "    kappa_mult=1.1, kappa_inc=5e-7, progress_bar=False\n",
+    ")"
    ]
   },
   {
@@ -600,10 +604,10 @@
    "outputs": [],
    "source": [
     "fix, ax = plt.subplots()  # create plot\n",
-    "m_serv = np.array(mk_serv.m_x[:8]) / 1e6  # get service analysis moments\n",
-    "m_ult = np.array(mk_ult.m_x[:8]) / 1e6  # get ultimate analysis moments\n",
-    "ax.plot(mk_serv.kappa[:8], m_serv, \"x-\", label=\"Service\")\n",
-    "ax.plot(mk_ult.kappa[:8], m_ult, \"x-\", label=\"Ultimate\")\n",
+    "m_serv = np.array(mk_serv.m_x[:4]) / 1e6  # get service analysis moments\n",
+    "m_ult = np.array(mk_ult.m_x[:4]) / 1e6  # get ultimate analysis moments\n",
+    "ax.plot(mk_serv.kappa[:4], m_serv, \"x-\", label=\"Service\")\n",
+    "ax.plot(mk_ult.kappa[:4], m_ult, \"x-\", label=\"Ultimate\")\n",
     "ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))\n",
     "plt.grid()\n",
     "plt.show()"
