--- a/docs/examples/stress_analysis.ipynb
+++ b/docs/examples/stress_analysis.ipynb
@@ -104,7 +104,7 @@
     "geom = concrete_circular_section(\n",
     "    d=600,\n",
     "    area_conc=np.pi * 600 * 600 / 4,\n",
-    "    n_conc=32,\n",
+    "    n_conc=24,\n",
     "    dia_bar=20,\n",
     "    area_bar=310,\n",
     "    n_bar=10,\n",
@@ -149,7 +149,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b2cef230",
-   "metadata": {},
+   "metadata": {
+    "nbsphinx-thumbnail": {
+     "output-index": 0
+    }
+   },
    "outputs": [],
    "source": [
     "uncr_stress_res_1.plot_stress()"
@@ -362,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mk_res = conc_sec.moment_curvature_analysis(progress_bar=False)"
+    "mk_res = conc_sec.moment_curvature_analysis(kappa_inc=2.5e-7, progress_bar=False)"
    ]
   },
   {
