--- a/docs/examples/biaxial_bending.ipynb
+++ b/docs/examples/biaxial_bending.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_res = conc_sec.biaxial_bending_diagram(progress_bar=False)"
+    "bb_res = conc_sec.biaxial_bending_diagram(n_points=24, progress_bar=False)"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_res = conc_sec.biaxial_bending_diagram(n=1000e3, progress_bar=False)\n",
+    "bb_res = conc_sec.biaxial_bending_diagram(n=1000e3, n_points=24, progress_bar=False)\n",
     "bb_res.plot_diagram()"
    ]
   },
@@ -199,7 +199,7 @@
    "id": "d3e08554",
    "metadata": {},
    "source": [
-    "Let's generate 11 biaxial bending curves from pure bending ($N=0$ kN) to close to the decompression point ($N=7400$ kN)."
+    "Let's generate 5 biaxial bending curves from pure bending ($N=0$ kN) to close to the decompression point ($N=7400$ kN)."
    ]
   },
   {
@@ -209,11 +209,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_list = np.linspace(0, 7400e3, 11)\n",
+    "n_list = np.linspace(0, 7400e3, 5)\n",
     "biaxial_results = []\n",
     "\n",
     "for n in n_list:\n",
-    "    biaxial_results.append(conc_sec.biaxial_bending_diagram(n=n, progress_bar=False))"
+    "    biaxial_results.append(\n",
+    "        conc_sec.biaxial_bending_diagram(n=n, n_points=24, progress_bar=False)\n",
+    "    )"
    ]
   },
   {
@@ -239,7 +241,7 @@
    "id": "89d391ff",
    "metadata": {},
    "source": [
-    "We can also generate a 2D plot of selected biaxial bending results."
+    "We can also generate a 2D plot of the biaxial bending results."
    ]
   },
   {
@@ -249,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BiaxialBendingResults.plot_multiple_diagrams_2d(biaxial_results[::2], fmt=\"-\")"
+    "BiaxialBendingResults.plot_multiple_diagrams_2d(biaxial_results, fmt=\"o-\")"
    ]
   },
   {
