Further docs changes

--- a/docs/examples/composite_section.ipynb
+++ b/docs/examples/composite_section.ipynb
@@ -13,7 +13,7 @@
    "id": "bb4a755a",
    "metadata": {},
    "source": [
-    "This example demonstrates how to *concreteproperties* can be used to analyse composite sections. We start by importing the necessary modules.\n"
+    "This example demonstrates how ``concreteproperties`` can be used to analyse composite sections. We start by importing the necessary modules.\n"
    ]
   },
   {
