--- a/docs/examples/moment_curvature.ipynb
+++ b/docs/examples/moment_curvature.ipynb
@@ -13,7 +13,7 @@
    "id": "588b04b5",
    "metadata": {},
    "source": [
-    "This example demonstrates how to perform a moment curvature analysis using *concreteproperties*. We start by importing the necessary modules."
+    "This example demonstrates how to perform a moment curvature analysis using ``concreteproperties``. We start by importing the necessary modules."
    ]
   },
   {
