--- a/docs/examples/prestressed_section.ipynb
+++ b/docs/examples/prestressed_section.ipynb
@@ -13,7 +13,7 @@
    "id": "7c0efa0f",
    "metadata": {},
    "source": [
-    "This example demonstrates how to carry out an analysis of a prestressed concrete section using *concreteproperties*. We start by importing the necessary modules."
+    "This example demonstrates how to carry out an analysis of a prestressed concrete section using ``concreteproperties``. We start by importing the necessary modules."
    ]
   },
   {
