--- a/docs/examples/stress_analysis.ipynb
+++ b/docs/examples/stress_analysis.ipynb
@@ -123,7 +123,7 @@
    "metadata": {},
    "source": [
     "## Elastic Uncracked Stress Analysis\n",
-    "We perform an uncracked stress analysis using the ``calculate_uncracked_stress()`` method. This analysis assumes the entire concrete section acts to resist the applied loading. Note that *concreteproperties* does not check to see if the provided moment is above the cracking moment, this should be confirmed by performing a cracking analysis."
+    "We perform an uncracked stress analysis using the ``calculate_uncracked_stress()`` method. This analysis assumes the entire concrete section acts to resist the applied loading. Note that ``concreteproperties`` does not check to see if the provided moment is above the cracking moment, this should be confirmed by performing a cracking analysis."
    ]
   },
   {
