--- a/docs/examples/ultimate_bending.ipynb
+++ b/docs/examples/ultimate_bending.ipynb
@@ -13,7 +13,7 @@
    "id": "4289d2fb",
    "metadata": {},
    "source": [
-    "This example demonstrates how to calculate ultimate bending capacities using *concreteproperties*. We start by importing the necessary modules.\n"
+    "This example demonstrates how to calculate ultimate bending capacities using ``concreteproperties``. We start by importing the necessary modules.\n"
    ]
   },
   {
