--- a/docs/_static/animation.ipynb
+++ b/docs/_static/animation.ipynb
@@ -17,13 +17,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import concreteproperties.stress_strain_profile as ssp\n",
     "import numpy as np\n",
+    "from sectionproperties.pre.geometry import Geometry\n",
+    "from shapely import Polygon\n",
+    "\n",
+    "import concreteproperties.stress_strain_profile as ssp\n",
     "from concreteproperties.concrete_section import ConcreteSection\n",
     "from concreteproperties.material import Concrete, SteelBar\n",
-    "from concreteproperties.pre import add_bar_rectangular_array\n",
-    "from sectionproperties.pre.geometry import Geometry\n",
-    "from shapely import Polygon"
+    "from concreteproperties.pre import add_bar_rectangular_array"
    ]
   },
   {
@@ -241,9 +242,10 @@
     "import matplotlib.patches as mpatches\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.tri as tri\n",
-    "from concreteproperties.post import plotting_context\n",
     "from matplotlib.collections import PatchCollection\n",
     "from matplotlib.colors import CenteredNorm\n",
+    "\n",
+    "from concreteproperties.post import plotting_context\n",
     "\n",
     "\n",
     "def plot_stress_and_graph(res_idx, mk_res_list, k_list, m_list, **kwargs):\n",
@@ -404,7 +406,9 @@
    "outputs": [],
    "source": [
     "import glob\n",
+    "\n",
     "from PIL import Image\n",
+    "\n",
     "\n",
     "# filepaths\n",
     "fp_in = \"anim/*.png\"\n",
