--- a/docs/examples/area_properties.ipynb
+++ b/docs/examples/area_properties.ipynb
@@ -23,15 +23,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sectionproperties.pre.library import concrete_rectangular_section\n",
+    "\n",
     "from concreteproperties import (\n",
     "    Concrete,\n",
-    "    SteelBar,\n",
     "    ConcreteLinear,\n",
-    "    RectangularStressBlock,\n",
-    "    SteelElasticPlastic,\n",
     "    ConcreteSection,\n",
-    ")\n",
-    "from sectionproperties.pre.library import concrete_rectangular_section"
+    "    RectangularStressBlock,\n",
+    "    SteelBar,\n",
+    "    SteelElasticPlastic,\n",
+    ")"
    ]
   },
   {
