--- a/docs/examples/as3600.ipynb
+++ b/docs/examples/as3600.ipynb
@@ -16,16 +16,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from concreteproperties.design_codes import AS3600\n",
-    "from concreteproperties import (\n",
-    "    RectangularStressBlock,\n",
-    "    BilinearStressStrain,\n",
-    "    EurocodeParabolicUltimate,\n",
-    "    ConcreteSection,\n",
-    ")\n",
+    "import numpy as np\n",
     "from sectionproperties.pre.library import concrete_rectangular_section\n",
+    "\n",
+    "from concreteproperties import (\n",
+    "    BilinearStressStrain,\n",
+    "    ConcreteSection,\n",
+    "    EurocodeParabolicUltimate,\n",
+    "    RectangularStressBlock,\n",
+    ")\n",
+    "from concreteproperties.design_codes import AS3600\n",
     "from concreteproperties.results import MomentInteractionResults"
    ]
   },
@@ -262,7 +263,7 @@
     "n_list, _ = mi_res.get_results_lists(moment=\"m_x\")  # get list of axial loads\n",
     "ax.plot(np.array(n_list) / 1e3, phis, \"-x\")\n",
     "plt.xlabel(\"Axial Force [kN]\")\n",
-    "plt.ylabel(\"$\\phi$\")\n",
+    "plt.ylabel(r\"$\\phi$\")\n",
     "plt.grid()\n",
     "plt.show()"
    ]
