--- a/docs/examples/composite_section.ipynb
+++ b/docs/examples/composite_section.ipynb
@@ -24,24 +24,25 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from sectionproperties.pre.library import (\n",
+    "    circular_section_by_area,\n",
+    "    concrete_circular_section,\n",
+    "    i_section,\n",
+    "    rectangular_section,\n",
+    ")\n",
+    "\n",
+    "import concreteproperties.results as res\n",
     "from concreteproperties import (\n",
     "    Concrete,\n",
+    "    ConcreteLinearNoTension,\n",
+    "    ConcreteSection,\n",
+    "    RectangularStressBlock,\n",
     "    Steel,\n",
     "    SteelBar,\n",
-    "    ConcreteLinearNoTension,\n",
-    "    RectangularStressBlock,\n",
     "    SteelElasticPlastic,\n",
     "    add_bar_circular_array,\n",
     "    add_bar_rectangular_array,\n",
-    "    ConcreteSection,\n",
-    ")\n",
-    "from sectionproperties.pre.library import (\n",
-    "    rectangular_section,\n",
-    "    circular_section_by_area,\n",
-    "    i_section,\n",
-    "    concrete_circular_section,\n",
-    ")\n",
-    "import concreteproperties.results as res"
+    ")"
    ]
   },
   {
