--- a/docs/examples/cracked_properties.ipynb
+++ b/docs/examples/cracked_properties.ipynb
@@ -24,15 +24,16 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from sectionproperties.pre.library import concrete_tee_section\n",
+    "\n",
     "from concreteproperties import (\n",
     "    Concrete,\n",
-    "    SteelBar,\n",
     "    ConcreteLinear,\n",
-    "    RectangularStressBlock,\n",
-    "    SteelElasticPlastic,\n",
     "    ConcreteSection,\n",
-    ")\n",
-    "from sectionproperties.pre.library import concrete_tee_section"
+    "    RectangularStressBlock,\n",
+    "    SteelBar,\n",
+    "    SteelElasticPlastic,\n",
+    ")"
    ]
   },
   {
