--- a/docs/examples/moment_interaction.ipynb
+++ b/docs/examples/moment_interaction.ipynb
@@ -24,16 +24,17 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from sectionproperties.pre.library import concrete_rectangular_section\n",
+    "\n",
     "from concreteproperties import (\n",
     "    Concrete,\n",
-    "    SteelBar,\n",
     "    ConcreteLinear,\n",
-    "    RectangularStressBlock,\n",
-    "    SteelElasticPlastic,\n",
     "    ConcreteSection,\n",
+    "    RectangularStressBlock,\n",
+    "    SteelBar,\n",
+    "    SteelElasticPlastic,\n",
     ")\n",
-    "from concreteproperties.results import MomentInteractionResults\n",
-    "from sectionproperties.pre.library import concrete_rectangular_section"
+    "from concreteproperties.results import MomentInteractionResults"
    ]
   },
   {
@@ -209,7 +210,7 @@
     "\n",
     "    conc_sec = ConcreteSection(geom)\n",
     "    mi_results.append(conc_sec.moment_interaction_diagram(progress_bar=False))\n",
-    "    labels.append(\"p = {0}\".format(0.01 * (idx + 1)))"
+    "    labels.append(f\"p = {0.01 * (idx + 1)}\")"
    ]
   },
   {
@@ -381,6 +382,7 @@
     "\n",
     "# reset axis limits to ensure labels are within plot\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "ax.set_xlim(-20, 850)\n",
     "ax.set_ylim(-3000, 9000)\n",
