--- a/docs/examples/stress_analysis.ipynb
+++ b/docs/examples/stress_analysis.ipynb
@@ -25,15 +25,16 @@
    "source": [
     "import numpy as np\n",
     "from rich.pretty import pprint\n",
+    "from sectionproperties.pre.library import concrete_circular_section\n",
+    "\n",
     "from concreteproperties import (\n",
     "    Concrete,\n",
-    "    SteelBar,\n",
+    "    ConcreteSection,\n",
     "    EurocodeNonLinear,\n",
     "    RectangularStressBlock,\n",
+    "    SteelBar,\n",
     "    SteelElasticPlastic,\n",
-    "    ConcreteSection,\n",
-    ")\n",
-    "from sectionproperties.pre.library import concrete_circular_section"
+    ")"
    ]
   },
   {
@@ -278,8 +279,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rich.table import Table\n",
     "from rich.console import Console\n",
+    "from rich.table import Table\n",
+    "\n",
     "\n",
     "# store forces & moments for later\n",
     "forces = []\n",
