--- a/docs/examples/ultimate_bending.ipynb
+++ b/docs/examples/ultimate_bending.ipynb
@@ -24,14 +24,15 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from sectionproperties.pre.library import rectangular_section, triangular_section\n",
+    "\n",
+    "import concreteproperties.stress_strain_profile as ssp\n",
     "from concreteproperties import (\n",
     "    Concrete,\n",
+    "    ConcreteSection,\n",
     "    SteelBar,\n",
     "    add_bar_rectangular_array,\n",
-    "    ConcreteSection,\n",
-    ")\n",
-    "import concreteproperties.stress_strain_profile as ssp\n",
-    "from sectionproperties.pre.library import rectangular_section, triangular_section"
+    ")"
    ]
   },
   {
