--- a/docs/examples/moment_curvature.ipynb
+++ b/docs/examples/moment_curvature.ipynb
@@ -24,14 +24,15 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sectionproperties.pre.library import rectangular_section, circular_section\n",
+    "from sectionproperties.pre.library import circular_section, rectangular_section\n",
+    "\n",
+    "import concreteproperties.stress_strain_profile as ssp\n",
     "from concreteproperties import (\n",
     "    Concrete,\n",
+    "    ConcreteSection,\n",
     "    SteelBar,\n",
     "    add_bar_rectangular_array,\n",
-    "    ConcreteSection,\n",
     ")\n",
-    "import concreteproperties.stress_strain_profile as ssp\n",
     "from concreteproperties.results import MomentCurvatureResults"
    ]
   },
@@ -346,6 +347,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "fix, ax = plt.subplots()\n",
     "kappa = np.array(moment_curvature_results[-1].kappa)\n",
